// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MasonryGrid correct usage renders all the gutter options 1`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 0px;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders all the gutter options 2`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 0.0625rem;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {

}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders all the gutter options 3`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 0.125rem;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders all the gutter options 4`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 0.25rem;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders all the gutter options 5`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 0.5rem;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders all the gutter options 6`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 0.75rem;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders all the gutter options 7`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 1rem;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders all the gutter options 8`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 1.5rem;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders all the gutter options 9`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 2rem;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders all the gutter options 10`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 3rem;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders all the gutter options 11`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 4rem;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {

}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders custom minItemWidth 1`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 1rem;
  --minItemWidth: 320px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 320px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders custom minItemWidth as string 1`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 1rem;
  --minItemWidth: 32rem;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 32rem ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid correct usage renders with theme overrides 1`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 200px;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid incorrect usage renders default with console error with minItemWidth input 1`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 1rem;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid incorrect usage renders default with console error with no gutter input 1`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 0px;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`MasonryGrid incorrect usage renders default with wrong gutter input 1`] = `
.c0 {
  box-sizing: border-box;
  --gutter: 0px;
  --minItemWidth: 639px;
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat( auto-fit, minmax(min(639px,100%),1fr) );
}

.c0 > * {
  margin: 0;
}

.c2 {
  --rows: 1;
  grid-row: span var(--rows);
}

.c2 > * {
  display: block;
  height: 100%;
}

.c1 {
  grid-template-rows: 1px;
}

@supports (width: 639px ) {
  .c0 {
    grid-template-columns: repeat( auto-fit, minmax(min(var(--minItemWidth),100%),1fr) );
  }
}

<div
  className="c0 c1"
  data-bedrock-layout-masonry-grid=""
>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
  <div
    className="c2"
    style={
      Object {
        "--rows": 1,
      }
    }
  >
    <div>
      1
    </div>
  </div>
</div>
`;
